# S3_file_management

./: .coveragerc  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  env.template  pyproject.toml  pytest.ini  ruff.toml
sfm/apps/files/shemas/: files.py
sfm/apps/files/views/: __init__.py  files.py  router.py
sfm/apps/internal/views/: __init__.py  healthcheck.py  router.py
sfm/core/: constants.py  logger.py  main.py  metrics.py  routers.py  settings.py
sfm/core/integrations/s3/: base_service.py  schemas.py
sfm/core/integrations/s3/aws/: di.py  schemas.py  services.py
sfm/core/mixins/: metrics.py
sfm/core/permissions/: rate_limiter.py
sfm/core/utils/: async_cache.py
tests/: conftest.py  constants.py  pytest.env
tests/apps/files/: test_views.py
tests/apps/files/cassettes/: test_delete_file_view.yaml  test_get_files_view.yaml  test_upload_file_view.yaml
tests/apps/internal/: test_views.py
tests/apps/internal/cassettes/: test_get_healthcheck.yaml
tests/core/integrations/s3/aws/: fixtures.py  test_services.py
tests/core/integrations/s3/aws/cassettes/: test_delete_file.yaml  test_get_list_files.yaml  test_get_list_files_max_keys.yaml  test_get_list_files_recursive.yaml  test_upload_file.yaml
tests/core/utils/: test_cache.py
tests/fixtures/: app.py  configs.py  service.py
tests/test_utils/: any.py
