[project]
name = "s3-file-management"
version = "0.1.0"
description = ""
authors = [
    {name = "Sustavov Maksim",email = "sustavovm@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "boto3 (>=1.38.36,<2.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pre-commit = "^4.2.0"
pre-commit-hooks = "^5.0.0"
pytest = "^8.4.0"
pytest-coverage = "^0.0"
pytest-dotenv = "^0.5.2"
pytest-vcr = "^1.0.2"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
freezegun = "^1.5.2"
